deployments/redis-slave-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-slave
spec:
  replicas: 2
  selector:
    matchLabels:
      role: slave
  template:
    metadata:
      labels:
        role: slave
    spec:
      containers:
        - name: redis-slave
          image: redis:latest
          ports:
            - containerPort: 6379
          command:
            [
              "redis-server",
              "--replicaof",
              "redis-service",
              "6379",
              "--slave-read-only",
              "no",
            ]
