deployments/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis
spec:
  type: NodePort # Use LoadBalancer if on cloud provider
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
